# airflow-project

./: .env  Dockerfile  example_00.py  example_01.py  pyproject.toml  requirements.txt
dags/: api_to_database.py  capturar_pokemon.py  duckdb_custom_operator.py  first_dag.py  second_dag.py  third_dag.py
include/: controller.py  db.py
